# proxy-detect

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/: comptroller.rs  eip1167.rs  eip1967.rs  eip897.rs  error.rs  lib.rs  openzeppelin.rs  safe.rs  utils.rs
