[package]
name = "ethui-proxy-detect"
version = "0.2.0"
edition = "2021"
license-file = "./LICENSE"


[dependencies]
alloy = { version = "0.11.1", default-features = false, features = [
  "providers",
  "reqwest-rustls-tls",
  "rpc",
  "rpc-types",
] }
thiserror = "2"

[dev-dependencies]
rstest = "0.25.0"
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
lazy_static = "1.5.0"
